Fix, visible elements counter went crazy due to display:content on the cards

--- a/css/jobs-search.css
+++ b/css/jobs-search.css
@@ -4,6 +4,10 @@
     width: unset;
 }
 
+.screen a {
+    display: unset;
+}
+
 .frame-9 {
     align-items: center;
     background-color: var(--neutral100);
@@ -495,7 +499,7 @@ main[total-jobs-matched="0"] .no-jobs-matching-your-criteria-section {
     justify-content: space-between;
 }
 
-.open-vacancy-card {
+.screen .open-vacancy-card {
     align-items: flex-start;
     background-color: var(--neutral100);
     border: 1px solid;
@@ -756,7 +760,7 @@ main[total-jobs-matched="0"] .no-jobs-matching-your-criteria-section {
     background-color: var(--meliteh-red);
     border-radius: 4px;
     gap: 8px;
-    padding: 8px 20px 8px 16px;
+    padding: 8px 20px;
     border: none;
     cursor: pointer;
 }
